Update index.html add name

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Your Name</h1>
+            <h1>Simon Eichhorn</h1>
             <p>Computer Science Student | Aspiring Developer</p>
             <nav>
                 <ul>
