--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section id="about">
             <div class="container">
                 <h2>About Me</h2>
-                <p>Hello! I'm Simon, a passionate computer science student with a strong interest in web delevopment, cyber security, and video game design.new technologies. In my free time, I like to play video games, draw, and make video games.</p>
+                <p>Hello! I'm Simon, a passionate computer science student with a strong interest in web development, cyber security, and video game design. In my free time, I like to play video games, draw, and make video games.</p>
                 <a href="link-to-your-resume.pdf" class="btn" download>Download Resume</a>
             </div>
         </section>
