--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simon Eichhorn - Portfolio</title>
+    <line rel=icon href="pikmin.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
