--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Simon Eichhorn - Portfolio</title>
+    <line rel=icon href="pikmin.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Your Name</h1>
+            <h1>Simon Eichhorn</h1>
             <p>Computer Science Student | Aspiring Developer</p>
             <nav>
                 <ul>
@@ -25,7 +26,7 @@
         <section id="about">
             <div class="container">
                 <h2>About Me</h2>
-                <p>Hello! I'm [Your Name], a passionate computer science student with a strong interest in [e.g., web development, machine learning, data science]. I enjoy building projects that solve real-world problems and continuously learning new technologies. In my free time, I like to [e.g., read, hike, contribute to open-source projects].</p>
+                <p>Hello! I'm Simon, a passionate computer science student with a strong interest in web development, cyber security, and video game design. In my free time, I like to play video games, draw, and make video games.</p>
                 <a href="link-to-your-resume.pdf" class="btn" download>Download Resume</a>
             </div>
         </section>
@@ -53,9 +54,8 @@
                 <h2>Contact</h2>
                 <p>Feel free to get in touch! You can find me on these platforms:</p>
                 <div class="social-links">
-                    <a href="link-to-your-linkedin" target="_blank">LinkedIn</a>
-                    <a href="link-to-your-github" target="_blank">GitHub</a>
-                    <a href="mailto:your-email@example.com">Email</a>
+                    <a href="https://github.com/Masterofnone745" target="_blank">GitHub</a>
+                    <a href="https://mail.google.com/mail/u/0/#inbox">Email</a>
                 </div>
             </div>
         </section>
@@ -63,7 +63,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Your Name. All rights reserved.</p>
+            <p>&copy; 2024 simon. All rights reserved.</p>
         </div>
     </footer>
     <script src="script.js"></script>
