--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simon Eichhorn - Portfolio</title>
-    <link rel="icon" href="pikmin.jpg" type="image/jpeg">
+    <link rel="icon" href="pikmin.jpg" type="image/jpeg" alt:"">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -51,7 +51,7 @@
                 <p>Feel free to get in touch! You can find me on these platforms:</p>
                 <div class="social-links">
                     <a href="https://github.com/Masterofnone745" target="_blank">GitHub</a>
-                    <a href="https://mail.google.com/mail/u/0/#inbox">Email</a>
+                     <a href="mailto:seichhorn26@pascack.org">Gmail</a>
                 </div>
             </div>
         </section>
