--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <div class="container">
                 <h2>About Me</h2>
                 <p>Hello! I'm Simon, a passionate computer science student with a strong interest in web development, cyber security, and video game design. In my free time, I like to play video games, draw, and make video games.</p>
+                <img src="Cat.png" alt="">
+                <p>Here is picture of my cat.</p>
             </div>
         </section>
 
