link test .html

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <div class="project-card">
                     <h3>Number Converter</h3>
                     <p> Converts numbers into various formats</p>
-                    <a href="link-to-project-github" target="_blank" class="btn">GitHub Repo</a>
-                    <a href="link-to-live-demo" target="_blank" class="btn">Live Demo</a>
+                    <a href="https://github.com/Masterofnone745/Number-converter" target="_blank" class="btn">GitHub Repo</a>
+                    <a href="https://masterofnone745.github.io/Number-converter/ target="_blank" class="btn">Live Demo</a>
                 </div>
                 
         </section>
