link test 1.5.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h3>Number Converter</h3>
                     <p> Converts numbers into various formats</p>
                     <a href="https://github.com/Masterofnone745/Number-converter" target="_blank" class="btn">GitHub Repo</a>
-                    <a href="https://masterofnone745.github.io/Number-converter/ target="_blank" class="btn">Live Demo</a>
+                    <a href="https://masterofnone745.github.io/Number-converter/" target="_blank" class="btn">Live Demo</a>
                 </div>
                 
         </section>
