--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section id="about">
             <div class="container">
                 <h2>About Me</h2>
-                <p>Hello! I'm Simon, a passionate computer science student with a strong interest in web development, cyber security, and video game design. In my free time, I like to play video games, draw, and make video games.</p>
+                <p>Hello! I'm Simon, a passionate computer science student with a strong interest in web development, cyber security, and video game design. In my free time, I like to play and make video games, draw, and sleep.</p>
             </div>
         </section>
 
