light puzzle descrip.html

--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
                 </div>
                 
         </section>
- 
                 <div class="project-card">
-                    <h3>Number Converter</h3>
-                    <p> Converts numbers into various formats</p>
+                    <h3>Ardunio Lights out puzzle</h3>
+                    <p> An ardunio puzzle where you need to figure out how to turn all of the lights off</p>
                     <a href="https://github.com/Masterofnone745/Number-converter" target="_blank" class="btn">GitHub Repo</a>
                     <a href="https://masterofnone745.github.io/Number-converter/" target="_blank" class="btn">Website</a>
                 </div>
