Update website link for Lights Out Arduino project

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <h3>Ardunio Lights out puzzle</h3>
                     <p> An ardunio puzzle where you need to figure out how to turn all of the lights off</p>
                     <a href="https://github.com/Masterofnone745/Lights-Out-Ardunio" target="_blank" class="btn">GitHub Repo</a>
-                     <a href="https://masterofnone745.github.io/Number-converter/" target="_blank" class="btn">Website</a>
+                     <a href="https://masterofnone745.github.io/Lights-Out-Ardunio/" target="_blank" class="btn">Website</a>
                 </div>
                 
             </div> </section> <section id="contact">
