--- a/Lightsout.html
+++ b/Lightsout.html
@@ -199,7 +199,7 @@ void updateLeds() {
     <!-- Footer -->
     <footer class="bg-gray-100 mt-8 py-6">
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-gray-500 text-sm">
-            &copy; 2024 Simon. Built with curiosity and code.
+            &copy; 2024 Simon.
         </div>
     </footer>
 
