Remove target attribute from project links

--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
                     <h3>Number Converter</h3>
                     <p> Converts numbers into various formats</p>
                     <a href="https://github.com/Masterofnone745/Number-converter" target="_blank" class="btn">GitHub Repo</a>
-                    <a href="https://masterofnone745.github.io/Number-converter/" target="_blank" class="btn">Web page</a>
+                    <a href="https://masterofnone745.github.io/Number-converter/"  class="btn">Web page</a>
                 </div>
                 
                 <div class="project-card">
                     <h3>Ardunio Lights out puzzle</h3>
                     <p> An ardunio puzzle where you need to figure out how to turn all of the lights off</p>
                     <a href="https://github.com/Masterofnone745/Lights-Out-Ardunio" target="_blank" class="btn">GitHub Repo</a>
-                     <a href="Lightsout.html" target="_blank" class="btn">Web page</a>
+                     <a href="Lightsout.html"  class="btn">Web page</a>
                 </div>
 
                 <div class="project-card">
                     <h3>King Pin </h3>
                     <p>A group project website to make a website for our schools bowling team</p>
                     <a href="" target="_blank" class="btn">GitHub Repo</a>
-                     <a href="" target="_blank" class="btn">Web page</a>
+                     <a href="" class="btn">Web page</a>
                 </div>
                 
             </div> </section> <section id="contact">
